# GameboyEmulator

./: CMakeLists.txt
gemu/: CMakeLists.txt  main.c
include/: bus.hpp  cart.hpp  common.hpp  cpu.hpp  dbg.hpp  dma.hpp  emu.hpp  gamepad.hpp  instructions.hpp  interrupts.hpp  io.hpp  lcd.hpp  ppu.hpp  ppu_sm.hpp  ram.hpp  stack.hpp  timer.hpp  ui.hpp
lib/: CMakeLists.txt  bus.cpp  cart.cpp  cpu.cpp  cpu_fetch.cpp  cpu_proc.cpp  dbg.cpp  dma.cpp  emu.cpp  gamepad.cpp  instructions.cpp  interrupts.c  lcd.c  opcodes.cpp  ppu.c  ram.c  somebullshit.cpp  stack.c  ui.c
